modification du template event dans le calendrier en prenant en compte le color du chauffeur pour distinguer les courses et en affichant le infos de client et l'heure de départ et l'adresse de départ

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>DriverCalendarFront</title>
@@ -7,11 +8,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet">
-<link href="https://unpkg.com/angular-calendar@0.25.2/css/angular-calendar.css" rel="stylesheet">
-<link href="https://unpkg.com/flatpickr@4.5.1/dist/flatpickr.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!-- <link href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet"> -->
+  <link href="https://unpkg.com/angular-calendar@0.25.2/css/angular-calendar.css" rel="stylesheet">
+  <link href="https://unpkg.com/flatpickr@4.5.1/dist/flatpickr.css" rel="stylesheet">
 </head>
+
 <body>
   <dc-root></dc-root>
 </body>
+
 </html>
