--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <!-- <link href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet"> -->
-  <link href="https://unpkg.com/angular-calendar@0.25.2/css/angular-calendar.css" rel="stylesheet">
-  <link href="https://unpkg.com/flatpickr@4.5.1/dist/flatpickr.css" rel="stylesheet">
+  <!-- <link href="https://unpkg.com/angular-calendar@0.25.2/css/angular-calendar.css" rel="stylesheet"> -->
+  <!-- <link href="https://unpkg.com/flatpickr@4.5.1/dist/flatpickr.css" rel="stylesheet"> -->
 </head>
 
 <body>
